libnma: unescape certificate paths in URIs

When the URI is a filesystem path, we want to return the unescaped
value ready to be used as a file name.

Note: value_with_scheme_to_uri() does not need a g_uri_escape_string()
because it seems file URIs can contain any character after "file://".

Fixes: 0da2398042bd8dccfdf63abf76b4d6b0679e4803

https://bugzilla.gnome.org/show_bug.cgi?id=793910